Database managers rewrite